# brtablet

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  hello.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
man/: brtablet.8
scripts/: Makefile  Makefile.am  Makefile.in  brtablet-init.sh
src/: Makefile  Makefile.am  Makefile.in  a.out  calibrator_rts.h  includes.h  inputattach.c  inputattach.h  io.c  io.h  main_common.c  util.c  util.h
src/.deps/: brtablet-gui_common.Po  brtablet-gui_gtk.Po  brtablet-inputattach.Po  brtablet-io.Po  brtablet-main_common.Po  brtablet-util.Po  inputattach.Po  inputattach2.Po  saida-calibrator_rts.Po  saida-gui_common.Po  saida-gui_gtk.Po  saida-inputattach.Po  saida-io.Po  saida-main_common.Po  saida-util.Po
src/attach/: Makefile  Makefile.am  Makefile.in  attach.c  brtablet-attach
src/attach/.deps/: attach.Po
src/brtablet/: Makefile  Makefile.am  Makefile.in  calibrator_rts.c  gui_common.h  gui_gtk.c  io.c  main_common.c  util.c  util.h
src/brtablet/.deps/: brtablet-calibrator_rts.Po  brtablet-gui_common.Po  brtablet-gui_gtk.Po  brtablet-io.Po  brtablet-main_common.Po  brtablet-util.Po  brtablet_calibrator-calibrator_rts.Po  brtablet_calibrator-inputattach.Po  brtablet_calibrator-io.Po
src/calibrator/: Makefile  Makefile.am  Makefile.in  brtablet-calibrator  gui_gtk.c  gui_gtk.h  io.c  io.h  main_common.c  util.c  util.h
src/calibrator/.deps/: brtablet_calibrator-calibrator_rts.Po  brtablet_calibrator-gui_common.Po  brtablet_calibrator-gui_gtk.Po  brtablet_calibrator-io.Po  brtablet_calibrator-main_common.Po  brtablet_calibrator-util.Po
src/driver/: .brtablet-driver.ko.cmd  .brtablet-driver.mod.o.cmd  .brtablet-driver.o.cmd  .brtablet.ko.cmd  .brtablet.mod.o.cmd  .brtablet.o.cmd  Kbuild  Makefile  brtablet-driver.c  brtablet-driver.h  brtablet-driver.ko  brtablet-driver.mod.c  brtablet.mod.c  brtablet_module.c  modules.order
src/driver/.tmp_versions/: brtablet-driver.mod
src/gui/: Makefile  Makefile.am  Makefile.in  gui_common.c  gui_common.h  gui_gtk.c
